# GKxB_INTM006

./: .gitignore  README.md  egysegteszt.kilepr  egysegteszt.tex  gmock.tex  section01.tex  section0301.tex  section0302.tex  section0303.tex  section0304.tex  section0305.tex  section0306.tex  section0307.tex  section0308.tex
01/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  example01.cpp  matrix01.h  matrix01test.cpp  matrix02test.cpp  runTests
02/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  matrix02.h  matrix02test.cpp  runTests
03/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  matrix03.h  matrix03test.cpp  runTests
04/: CMakeLists.txt  matrix04.h  matrix04test.cpp  runTests
05/: CMakeLists.txt  matrix05test.cpp
06/: CMakeLists.txt  matrix06test.cpp
07/: CMakeLists.txt  matrix07test.cpp
08/: CMakeLists.txt  matrix08.h  matrix08test.cpp
09/: CMakeLists.txt  matrix09.h  matrix09test.cpp
10/: CMakeLists.txt  matrix10test.cpp
11/: CMakeLists.txt  matrix11.h  matrix11test.cpp
12/: CMakeLists.txt  egysegteszt.xml  matrix12.h  matrix12test.cpp
13/: CMakeLists.txt  matrix13.h  matrix13test.cpp
14/: CMakeLists.txt  matrix14.h  matrix14test.cpp
15/: CMakeLists.txt  MockPerson.h  Person.cpp  Person.h  PersonTest.cpp  PersonTest_hiba1.cpp  PersonTest_hiba2.cpp  Table.cpp  Table.h  main.cpp
gyakorlas/: CMakeLists.txt  akasztofa.cpp  akasztofa.h  akasztofatest.cpp  akasztofatest_megoldas.cpp  jatek.cpp
